issue-3 - list implementation
- dynamodb scan implementation
- pagination
- aws iam permissions
