# docs/swagger.json
@@ -46,7 +46,7 @@
                     "200": {
                         "description": "Successful operation",
                         "schema": {
-                            "$ref": "#/definitions/restapi.response"
+                            "$ref": "#/definitions/restapi.responseTransaction"
                         }
                     },
                     "403": {
@@ -191,6 +191,10 @@
                 "limit": {
                     "type": "integer",
                     "example": 10
+                },
+                "next": {
+                    "type": "string",
+                    "example": "http://localhost:8080/v1/transactions?limit=10\u0026next=eyJpZGVtcG9udGVuY2llS2V5IjoiMTIzNDU2Nzg5MCIsImxpbWl0IjoxMH0="
                 }
             }
         },
@@ -209,10 +213,15 @@
                 }
             }
         },
-        "restapi.response": {
+        "restapi.responseTransaction": {
             "type": "object",
             "properties": {
-                "data": {},
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Transaction"
+                    }
+                },
                 "metadata": {
                     "$ref": "#/definitions/restapi.Metadata"
                 }
